# X-Road-scripts

./: .gitignore  LICENSE  README.md  requirements.txt
misc/: .gitignore  certs_expiration.py  globalconf_expiration.py  last_successful_message.py  ocsp_produced.py  oldest_log_without_timestamp.py  requirements.txt  rights_given.py  updated_hosts.cfg_example  updated_hosts.py
python/: xrd_all_methods.py  xrd_all_methods_allowed.py  xrd_methods.py  xrd_methods_allowed.py  xrd_registered_subsystems.py  xrd_subsystems.py  xrd_subsystems_with_server.py
python/xrdinfo/: __init__.py
shell/: cat_mlog.sh  cat_mlog_st.sh
xrdinfo/: pyproject.toml  wsdls_history.py  xrd_all_methods.py  xrd_all_methods_allowed.py  xrd_all_wsdls.py  xrd_members.py  xrd_methods.py  xrd_methods_allowed.py  xrd_openapi.py  xrd_registered_subsystems.py  xrd_servers.py  xrd_servers_ips.py  xrd_subsystems.py  xrd_subsystems_with_membername.py  xrd_subsystems_with_server.py  xrd_wsdl.py  xrdinfo.py
xrdinfo-src/: .pylintrc  README.md  pyproject.toml  xrd_members.py  xrd_methods.py  xrd_openapi.py  xrd_registered_subsystems.py  xrd_servers.py  xrd_subsystems.py  xrd_subsystems_with_server.py  xrd_wsdl.py
xrdinfo-src/xrdinfo/: __init__.py
zabbix/: envmon_template.xml  metrics.cfg_example  metrics.cfg_local_example  metrics.py  requirements.txt  zabbix_cron.sh
zabbix/local/: docker-compose.yml
