[build-system]
# Supporting setuptools version used in Ubuntu 22.04
requires = ["setuptools >= 59.6"]
build-backend = "setuptools.build_meta"

[project]
name = "xrdinfo"
version = "1.3.2"
authors = [
    { name="Vitali Stupin", email="vitali.stupin@ria.ee" },
]
description = "X-Road informational module"
dependencies = [
    "pyyaml",
    "requests"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools]
py-modules = ["xrdinfo"]
